--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-invoke==0.17.0
-pytest==3.0.7
-requests==2.13.0
+invoke==0.19.0
+pytest==3.1.2
+requests==2.18.1
+pylint==1.7.2
+pydocstyle==2.0.0
+pycodestyle==2.3.1
+mypy==0.511
