--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - '3.6'
 
 install:
-  - pip install -r requirements.txt
+  - make requirements
 
 script:
-  - python -m pytest tests/
+  - make test
