Fixes #19 - Adds test coverage checks
Inspired from https://github.com/codecov/example-python

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,12 @@
 __pycache__/
 
 # Test cached data
-.cache/
+/.cache/
+/.coverage
 
 # Generated docs
-README.rst
+/README.rst
 
 # Distribution temp data
-dist/
+/dist/
 *.egg-info
