--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+# Project's dependencies:
 requests==2.18.4
+
+# Validation tools and dependencies:
 pylint==1.8.1
-pytest==3.3.1
+pytest==3.3.2
 factory-boy==2.9.2
 pytest-cov==2.5.1
 six==1.11.0 # for pytest-cov
-codecov==2.0.11
+codecov==2.0.12
+pur==4.0.3
